# CTK

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.py
CMake/: ctkFunctionCompileSnippets.cmake  ctkMacroSimpleTest.cmake
Libs/: CMakeLists.txt
Libs/Core/: CMakeLists.txt
Libs/Core/Testing/Cpp/: CMakeLists.txt  ctkDummyPlugin.h  ctkHighPrecisionTimerTest.cpp  ctkUtilsTest4.cpp
Libs/Scripting/Python/: CMakeLists.txt
Libs/Scripting/Python/Core/: CMakeLists.txt
Libs/Scripting/Python/Widgets/: CMakeLists.txt
Libs/Visualization/: CMakeLists.txt
Libs/Visualization/VTK/Core/: CMakeLists.txt  ctkVTKScalarsToColorsUtils.cpp  vtkDiscretizableColorTransferChart.cpp  vtkScalarsToColorsContextItem.cpp  vtkScalarsToColorsPreviewChart.cpp
Libs/Visualization/VTK/Core/Testing/Cpp/: CMakeLists.txt
Libs/Visualization/VTK/Widgets/: CMakeLists.txt  ctkVTKDiscretizableColorTransferWidget.cpp  ctkVTKScalarsToColorsComboBox.cpp
Libs/Visualization/VTK/Widgets/Testing/Cpp/: CMakeLists.txt  ctkVTKScalarsToColorsComboBoxTest1.cpp
Libs/Widgets/: CMakeLists.txt
Libs/Widgets/Plugins/: CMakeLists.txt  ctkWidgetsAbstractPlugin.cpp  ctkWidgetsAbstractPlugin.h  ctkWidgetsPlugins.h
Libs/Widgets/Resources/: ctkWidgets.qrc
Libs/Widgets/Testing/Cpp/: CMakeLists.txt  ctkConsoleTest.cpp
